--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@
 title:               Ed.
 tagline:             'a jekyll theme for minimal editions'
 description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
-url:                 'http://elotroalex.github.io'
+url:                 'https://github.com/ninarose1028/PERK.git'
 baseurl:             '/ed'
 
 # About/contact
 author:
-  name:              Alex Gil
-  url:               https://twitter.com/elotroalex
-  email:             colibri.alex@gmail.com
+  name:              Nina Rosenblatt
+  url:               www.trevor.org
+  email:             nrosenblatt@trevor.org
 
 # Permalinks
 
